# orionStacker

./: .gitignore  CMakeLists.txt  CPUStackerAlfaSigma.c  CPUStarFinder.c  README.md  README.txt  addRGGB.c  cudaStackerAlfaSigma.cu  cudaStackerAlfaSigmaCPU.c  cudaStackerMean.cu  cudaStarFinder.cu  device_alfa_sigma.h  device_starFinder.h  device_thresholding.h  fits_api.h  host_alfa_sigma.h  mediaGPTSat.cu  openstacker.cu  openstacker_int16.cu  parte2  parte2.cu  starFinderCPU.c  verify_result.c
.devcontainer/: Dockerfile
src/: CMakeLists.txt
src/calibration/: CMakeLists.txt  device_calibration.cu
src/calibration/include/: calibration.h
src/common/: MHC_filters.h  cudaDebayer.cu  cuda_check.h  device_debayer.h
src/debayer/: CMakeLists.txt  MHC_apply.h  device_debayer.cu
src/debayer/include/: debayer.h
src/stacker/: CMakeLists.txt  CPUStackerAlfaSigma.c  cudaStackerAlfaSigma.cu  cudaStackerMean.cu  device_alfa_sigma.h
src/star_finder/: CMakeLists.txt  cudaStarFinder.cu  device_starFinder.h  host_starFinder.h
test/: CMakeLists.txt  cudaCalibration.cu  cudaDebayerTest.cu  cudaStackerAlfaSigma.cu  cudaStarFinder.cu  features.cpp
tests/: CMakeLists.txt  CPUStarFinder.c  cudaDebayerTest.cu  cudaStackerAlfaSigma.cu  cudaStarFinder.cu  features.cpp
utils/: printfitsmetadata.c
